# youtube_chatbot

./: .env  .gitgnore  .gitignore  LICENSE  README.md  alembic.ini  docker-compose.yml  main.py  pyproject.toml  requirements.txt
app/: main.py  test.py
app/api/routes/: channel.py
app/core/: config.py  logger.py
app/database/: chunks.py  models.py  schemas.py  session.py
app/database/alembic/: env.py
app/database/alembic/versions/: 2e6e89f774eb_create_youtube_videos_table.py  554fcd758ed4_create_actual_tables.py  d12613a7543a_add_channels_table_and_link_videos.py
app/db/: base.py  models.py  repository.py
app/embeddings/: vector_store.py
app/ingestion/: channel_service.py  transcript_service.py  video_service.py  youtube_client.py
app/llm/: gemini_client.py
app/models/: embedder.py
app/rag/: rag_pipeline.py
app/scripts/: generate_embeddings.py  ingest_channel.py  ingest_data.py  run_rag_query.py
app/transcription/: audio_downloader.py  speech_to_text.py
app/youtube/: fetcher.py
data/: metadata.json
